--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "C 프로그래밍"
+title                    : "lend an ear to me "
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "여희재"
-description              : "시스템 프로그래밍을 위한 C언어"
+description              : "song recommendation & genre explanation"
 url                      : "https://iorzhl.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "iorzhl/heejaeyue.github.io"
